--- a/.github/workflows/codexray.yml
+++ b/.github/workflows/codexray.yml
@@ -31,14 +31,14 @@ jobs:
         with:
           go-version: '1.21'
 
-      - name: Run Tests
-        run: |
-          go test ./...
+  #    - name: Run Tests
+  #      run: |
+  #        go test ./...
 
-      - name: Run Linter
-        run: |
-          go fmt ./...
-          go vet ./...
+  #    - name: Run Linter
+  #      run: |
+  #        go fmt ./...
+  #        go vet ./...
 
 # -------------------------------------
 # Job 2: Build and Push Docker Image
