Consolidated Kubernetes manifests into a single file

--- a/.github/workflows/codexray.yml
+++ b/.github/workflows/codexray.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Apply Kubernetes Manifest
         run: |
-          kubectl apply -f codexray.yaml
+          kubectl apply -f ./codexray.yaml
 
       - name: Verify Deployment
         run: |
