--- a/.github/workflows/codexray.yml
+++ b/.github/workflows/codexray.yml
@@ -67,12 +67,20 @@ jobs:
 # -------------------------------------
 # Job 3: Deploy to Kubernetes (K3s)
 # -------------------------------------
-  deploy-to-k3s:
+ deploy-to-k3s:
     name: Deploy to Kubernetes (K3s)
     runs-on: ubuntu-latest
-    needs: build-and-push  # Runs after Docker image is pushed
+    needs: build-and-push
 
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: List Directory Contents
+        run: |
+          pwd
+          ls -la
+
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
         with:
@@ -85,7 +93,7 @@ jobs:
 
       - name: Apply Kubernetes Manifest
         run: |
-          kubectl apply -f ./codexray.yaml
+          kubectl apply -f codexray.yaml
 
       - name: Verify Deployment
         run: |
