--- a/.github/workflows/codexray.yml
+++ b/.github/workflows/codexray.yml
@@ -91,11 +91,12 @@ jobs:
           echo "${{ secrets.KUBECONFIG }}" > kubeconfig.yaml
           chmod 600 kubeconfig.yaml
           export KUBECONFIG=kubeconfig.yaml
-
+          
       - name: Debug Kubernetes Config
         run: |
-          echo "---- KUBECONFIG Content ----"
-          cat kubeconfig.yaml
+          echo "---- KUBECONFIG Server ----"
+          kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}'
+          echo ""
           echo "---- Current Context ----"
           kubectl config current-context
           echo "---- Kubernetes Cluster Info ----"
@@ -104,7 +105,7 @@ jobs:
           kubectl get nodes
           echo "---- Kubernetes All Namespaces ----"
           kubectl get pods --all-namespaces
-          
+
       - name: Apply Kubernetes Manifest
         run: |
           kubectl apply -f codexray.yaml
