--- a/.github/workflows/codexray.yml
+++ b/.github/workflows/codexray.yml
@@ -86,29 +86,25 @@ jobs:
         with:
           version: 'latest'
 
-      - name: Configure kubeconfig
+      - name: Decode Kubeconfig Secret
         run: |
-          echo "${{ secrets.KUBECONFIG }}" > kubeconfig.yaml
+          echo "${{ secrets.KUBECONFIG_B64 }}" | base64 -d > kubeconfig.yaml
           chmod 600 kubeconfig.yaml
-          export KUBECONFIG=kubeconfig.yaml
-          
-      - name: Debug Kubernetes Config
+          export KUBECONFIG=$(pwd)/kubeconfig.yaml
+
+      - name: Verify Kubernetes Access
         run: |
           echo "---- KUBECONFIG Server ----"
           kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}'
-          echo ""
           echo "---- Current Context ----"
           kubectl config current-context
           echo "---- Kubernetes Cluster Info ----"
           kubectl cluster-info
           echo "---- Kubernetes Nodes ----"
           kubectl get nodes
-          echo "---- Kubernetes All Namespaces ----"
-          kubectl get pods --all-namespaces
-
-      - name: Apply Kubernetes Manifest
-        run: |
-          kubectl apply -f codexray.yaml
+            - name: Apply Kubernetes Manifest
+              run: |
+                kubectl apply -f codexray.yaml
 
       - name: Verify Deployment
         run: |
