--- a/.github/workflows/codexray.yml
+++ b/.github/workflows/codexray.yml
@@ -43,26 +43,26 @@ jobs:
 # -------------------------------------
 # Job 2: Build and Push Docker Image
 # -------------------------------------
-  build-and-push:
-    name: Build and Push Docker Image
-    runs-on: ubuntu-latest
-    needs: ci  # Runs after CI passes
+  # build-and-push:
+  #   name: Build and Push Docker Image
+  #   runs-on: ubuntu-latest
+  #   needs: ci  # Runs after CI passes
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+  #     - name: Login to Docker Hub
+  #       run: |
+  #         echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Build Docker Image
-        run: |
-          docker build -t $DOCKER_IMAGE -f Dockerfile .
+  #     - name: Build Docker Image
+  #       run: |
+  #         docker build -t $DOCKER_IMAGE -f Dockerfile .
 
-      - name: Push Docker Image to Docker Hub
-        run: |
-          docker push $DOCKER_IMAGE
+  #     - name: Push Docker Image to Docker Hub
+  #       run: |
+  #         docker push $DOCKER_IMAGE
 
 # -------------------------------------
 # Job 3: Deploy to Kubernetes (K3s)
@@ -90,17 +90,19 @@ jobs:
         run: |
           echo "${{ secrets.KUBECONFIG_B64 }}" | base64 -d > kubeconfig.yaml
           export KUBECONFIG=$(pwd)/kubeconfig.yaml
-     
-      - name: Verify Kubeconfig File
-        run: |
-          echo "---- Verify kubeconfig.yaml Existence ----"
-          ls -l kubeconfig.yaml
-          echo "---- Display kubeconfig.yaml Content ----"
-          cat kubeconfig.yaml
-          echo "---- Verify KUBECONFIG Environment Variable ----"
-          echo "KUBECONFIG is set to: $KUBECONFIG"
-          test -f $KUBECONFIG && echo "✅ Kubeconfig file exists and is readable" || echo "❌ Kubeconfig file missing"
 
+      - name: Debug Kubernetes Connection
+        run: |
+          echo "---- KUBECONFIG Path ----"
+          echo "KUBECONFIG=$KUBECONFIG"
+          echo "---- Verify File Existence ----"
+          ls -l kubeconfig.yaml || echo "❌ kubeconfig.yaml is missing"
+          echo "---- Display kubeconfig.yaml ----"
+          cat kubeconfig.yaml || echo "❌ Unable to read kubeconfig.yaml"
+          echo "---- Test kubectl Connectivity ----"
+          kubectl cluster-info --kubeconfig=kubeconfig.yaml || echo "❌ Unable to reach the cluster"
+          echo "---- Test Nodes List ----"
+          kubectl get nodes --kubeconfig=kubeconfig.yaml || echo "❌ Unable to fetch nodes"
 
       - name: Verify Kubernetes Access
         run: |
