--- a/.github/workflows/codexray.yml
+++ b/.github/workflows/codexray.yml
@@ -56,13 +56,13 @@ jobs:
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Build Docker Image
-        run: |
-          docker build -t $DOCKER_IMAGE -f Dockerfile .
+      # - name: Build Docker Image
+      #   run: |
+      #     docker build -t $DOCKER_IMAGE -f Dockerfile .
 
-      - name: Push Docker Image to Docker Hub
-        run: |
-          docker push $DOCKER_IMAGE
+      # - name: Push Docker Image to Docker Hub
+      #   run: |
+      #     docker push $DOCKER_IMAGE
 
 # -------------------------------------
 # Job 3: Deploy to Kubernetes (K3s)
