--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coroot/coroot",
+  "name": "@codexray/codexray",
   "version": "0.1.0",
   "scripts": {
     "build-dev": "vue-cli-service build --dest=../static --watch",
